add routes to reddit individual items

--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js">
   <head>
@@ -80,6 +81,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/redditList.js"></script>
+        <script src="scripts/controllers/reddititem.js"></script>
 
         <!-- directives: -->
 
@@ -88,6 +90,7 @@
         <script src="scripts/services/testService.js"></script>
 
 
+        
         <!-- endbuild -->
 </body>
 </html>
