--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/nginfinitescroll/build/ng-infinite-scroll.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -88,9 +89,7 @@
 
         <!-- services -->
         <script src="scripts/services/testService.js"></script>
-
-
-        
+        <script src="scripts/services/redditinfinitescroll.js"></script>
         <!-- endbuild -->
 </body>
 </html>
