fixed route urls

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <div class="container" data-ng-controller="SharedCtrl">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li data-ng-class="{active: isActive('')}"><a ng-href="#">Home</a></li>
+          <li data-ng-class="{active: isActive('')}"><a ng-href="#/">Home</a></li>
           <li data-ng-class="{active: isActive('/about')}"><a ng-href="#/about">About</a></li>
           <li data-ng-class="{active: isActive('/contact')}"><a ng-href="#">Contact</a></li>
           <li data-ng-class="{active: isActive('/redditList')}"><a href="#/redditList">Reddit List</a></li>
@@ -74,6 +74,8 @@
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
