--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../bower_components/Font-Awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/helpers.css">
     <!-- endbuild -->
   </head>
   <body ng-app="angularApisApp">
