--- a/app/index.html
+++ b/app/index.html
@@ -24,18 +24,11 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" data-ng-controller="SharedCtrl">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li data-ng-class="{active: isActive('/')}"><a ng-href="#/">Home</a></li>
-          <li data-ng-class="{active: isActive('/about')}"><a ng-href="#/about">About</a></li>
-          <li data-ng-class="{active: isActive('/contact')}"><a ng-href="#">Contact</a></li>
-          <li data-ng-class="{active: isActive('/redditList')}"><a href="#/redditList">Reddit List</a></li>
-        </ul>
-        <h3 class="text-muted">angular-reddit stuff</h3>
-      </div>
+    <div class="container">
 
-      <div ng-view=""></div>
+      <header-menu></header-menu>
+
+      <div ui-view></div>
 
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
@@ -73,6 +66,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -82,13 +76,15 @@
         <script src="scripts/app.js"></script>
 
         <!-- controllers: -->
-        <script src="scripts/controllers/shared-controller.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/redditList.js"></script>
-        <script src="scripts/controllers/reddititem.js"></script>
+        <script src="scripts/controllers/reddit-list.js"></script>
+        <script src="scripts/controllers/reddit-item.js"></script>
 
         <!-- directives: -->
+        <script src="scripts/directives/header-menu.js"></script>
+
+
 
         <!-- services -->
         <script src="scripts/services/testService.js"></script>
